# Weather

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  requirements-ml.txt  requirements.txt
api/: README.md  __init__.py  engine_adapter.py  main.py  models.py  routes.py
api/dc_microgrid_dwt/: reference_microgrid.mat  start_system.py
api/dc_microgrid_dwt/config/: dsp_settings.yaml  hardware_map.yaml  thresholds.json
api/dc_microgrid_dwt/cpp/: CMakeLists.txt  bindings.cpp  build.py  dsp_core.cpp  dsp_core.h
api/dc_microgrid_dwt/esp32_dsp/: platformio.ini
api/dc_microgrid_dwt/esp32_dsp/include/: dsp_config.h  dsp_core_esp32.h
api/dc_microgrid_dwt/esp32_dsp/src/: main.cpp
api/dc_microgrid_dwt/esp32_dsp/test/: test_dsp_equivalence.cpp  test_native.cpp
api/dc_microgrid_dwt/plugins/: __init__.py
api/dc_microgrid_dwt/scripts/: create_reference_grid.py
api/dc_microgrid_dwt/simulation/: advanced_scenarios.py  fault_scenarios.py
api/dc_microgrid_dwt/src/: main.py
api/dc_microgrid_dwt/src/adapters/: grid_emulator.py  hardware_adc.py  high_speed_loop.py  (+2 more)
config/: data.py  settings.py
core/forecasting/: solar.py  wind.py
core/models/: hybrid_wrapper.py  wind_wrapper.py
core/simulation/: generator.py
pklh5_NN_engine/WPF_Production_Bundle/: deep_physics_transformer.h5  global_scaler.pkl  inference_engine.py
pklh5_NN_engine/solar_ai/: hybrid_v1_lstm.pt  hybrid_v1_scaler.pkl  hybrid_v1_xgb.pkl
pklh5_NN_engine/solar_ai/hybrid_v1_lstm/: data.pkl
ui/: charts.py  dashboard.py  fault_detection_page.py  map_components.py
(+59 files in other folders)
